# negative-energy-generator

./: .gitignore  BREAKTHROUGH_INTEGRATION_COMPLETE.md  COMPLETE_THEORETICAL_VALIDATION_REPORT.md  COMPREHENSIVE_MILESTONES_REPORT.md  CONTRIBUTING.md  CONTROL_SYSTEM_IMPLEMENTATION_SUMMARY.md  FEEDBACK_CONTROL_DEMO_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  HARDWARE_ENSEMBLE_REPORT.json  HARDWARE_MODULES_MILESTONES.md  HIGH_INTENSITY_FIELD_INTEGRATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS_REPORT.md  IMPLEMENTATION_SUMMARY.py  INSTRUMENTATION_INTEGRATION_COMPLETE.md  INTEGRATED_SMALL_SCALE_DEMO_REPORT.md  LIV_EXPERIMENTAL_MODULES_MILESTONE_ANALYSIS.json  LIV_MILESTONE_ANALYSIS.py  ML_POWERED_PROTOTYPE_STACK_COMPLETE.md  MULTI_OBJECTIVE_MILESTONES.md  MULTI_OBJECTIVE_STATUS_COMPLETE.md  NOTEBOOK_CONVERSION_COMPLETE.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHYSICS_BACKEND_SETUP.md  POLYMER_QFT_FRAMEWORK_COMPLETE.md  PROTOTYPE_STACK_COMPLETE.md  README.md  REAL_PHYSICS_INTEGRATION_COMPLETE.md  ROADMAP_ASSESSMENT_SUMMARY.md  SIMULATION_SUITE_README.md  STACK_AND_SQUEEZE_COMPLETE.md  TASK_COMPLETION_SUMMARY.md  UQ-TODO-RESOLVED.ndjson  UQ-TODO.ndjson  VnV-TODO.ndjson  advanced_ml_optimization_demo.py  check_actual_readiness.py  check_readiness.py  complete_integration_report_20250624_075132.json  complete_prototype_stack_demo.py  (+68 more)
docs/: GRAVITON_QFT_EXOTIC_MATTER_SAFETY.md  future-directions.md  literature_review.md  progress_log.md  progress_log.ndjson  roadmap.ndjson  technical-documentation.md
examples/: basic_usage.py
results/: demo_sweep.h5  (+3 more)
(+155 files in other folders)
