[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "negative_energy_generator"
version = "0.1.0"
description = "Negative Energy Generator Physics Simulation Framework"
authors = [
  { name = "Arcticoder" }
]
readme = "README.md"
license = { text = "Unlicense" }
dependencies = [
  "numpy>=1.24",
  "scipy>=1.8",
  "matplotlib>=3.6",
  "pandas>=1.5",
  "lqg_first_principles_gravitational_constant>=0.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["negative_energy_generator*", "simulation"]
